[package]
name = "dreambot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros", "sqlite-storage-nativetls"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
